--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,8 @@
 
 # Web related
 lib/generated_plugin_registrant.dart
-
+lib/auth/secrets.dart
+lib/auth/.secrets.dart
 # Symbolication related
 app.*.symbols
 
@@ -46,4 +47,3 @@ app.*.map.json
 /android/app/release
 
 #secrets
-/lib/auth/secrets.dart
